validated the css and html and fixed some code

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 
 /* Mobile css */
-/* @media screen and (min-width: 320px) { */
+@media screen and (min-width: 320px) { 
 	
 	.grid-container {
 		margin: 0;
@@ -267,12 +267,6 @@
 		margin: 0 auto;
 		padding: 5px;
 	}
-	.widget-container-full {
-		
-	}
-	#traffic-chart {
-		
-	}
 	.traffic-nav li:hover {
 		cursor: pointer;
 		border: 1px solid green;
@@ -475,7 +469,7 @@
 	/* NEW MEMBERS AREA */
 	.new-members-area {
 		border-top: 2px solid lightgrey;
-		border-width: 100%;
+		border-width: 98px;
 		margin: 0 auto;
 		display: block;
 		width: 100%;
@@ -817,11 +811,7 @@
 	.widget-container-half {
 		width: 95vw;
 	}
-
-
-
-/* } */
-
+}
 
 /* Tablet css **************************************************************/
 @media screen and (min-width: 768px) {
@@ -1108,14 +1098,10 @@
 
 
 	.bell-icon:hover {
-		-webkit-animation: ring 4s .7s ease-in-out infinite;
-		-webkit-transform-origin: 50% 4px;
-		-moz-animation: ring 4s .7s ease-in-out infinite;
-		-moz-transform-origin: 50% 4px;
 		animation: ring 4s .7s ease-in-out infinite;
 		transform-origin: 50% 4px;
 	}
-	@-webkit-keyframes ring {
+	@keyframes ring {
 		0% { -webkit-transform: rotateZ(0); }
 		1% { -webkit-transform: rotateZ(30deg); }
 		3% { -webkit-transform: rotateZ(-28deg); }
@@ -1143,32 +1129,31 @@
 		100% { -webkit-transform: rotateZ(0); }
 	  }
 	  
-	  @-moz-keyframes ring {
-		0% { -moz-transform: rotate(0); }
-		1% { -moz-transform: rotate(30deg); }
-		3% { -moz-transform: rotate(-28deg); }
-		5% { -moz-transform: rotate(34deg); }
-		7% { -moz-transform: rotate(-32deg); }
-		9% { -moz-transform: rotate(30deg); }
-		11% { -moz-transform: rotate(-28deg); }
-		13% { -moz-transform: rotate(26deg); }
-		15% { -moz-transform: rotate(-24deg); }
-		17% { -moz-transform: rotate(22deg); }
-		19% { -moz-transform: rotate(-20deg); }
-		21% { -moz-transform: rotate(18deg); }
-		23% { -moz-transform: rotate(-16deg); }
-		25% { -moz-transform: rotate(14deg); }
-		27% { -moz-transform: rotate(-12deg); }
-		29% { -moz-transform: rotate(10deg); }
-		31% { -moz-transform: rotate(-8deg); }
-		33% { -moz-transform: rotate(6deg); }
-		35% { -moz-transform: rotate(-4deg); }
-		37% { -moz-transform: rotate(2deg); }
-		39% { -moz-transform: rotate(-1deg); }
-		41% { -moz-transform: rotate(1deg); }
-	  
-		43% { -moz-transform: rotate(0); }
-		100% { -moz-transform: rotate(0); }
+	  @keyframes ring {
+		0% { -transform: rotate(0); }
+		1% { transform: rotate(30deg); }
+		3% { transform: rotate(-28deg); }
+		5% { transform: rotate(34deg); }
+		7% { transform: rotate(-32deg); }
+		9% { transform: rotate(30deg); }
+		11% { transform: rotate(-28deg); }
+		13% { transform: rotate(26deg); }
+		15% { transform: rotate(-24deg); }
+		17% { transform: rotate(22deg); }
+		19% { transform: rotate(-20deg); }
+		21% { transform: rotate(18deg); }
+		23% { transform: rotate(-16deg); }
+		25% { transform: rotate(14deg); }
+		27% { transform: rotate(-12deg); }
+		29% { transform: rotate(10deg); }
+		31% { transform: rotate(-8deg); }
+		33% { transform: rotate(6deg); }
+		35% { transform: rotate(-4deg); }
+		37% { transform: rotate(2deg); }
+		39% { transform: rotate(-1deg); }
+		41% { transform: rotate(1deg); }
+		43% { transform: rotate(0); }
+		100% { transform: rotate(0); }
 	  }
 	  
 	  @keyframes ring {
@@ -1200,17 +1185,10 @@
 	  }
 
 
-
-
-	.sidebar-nav-icons {
-		
-	}
-
-
 	.Dashboard-area .headline {
 		margin: 0;
 		padding-left: 11px;
-		width: 15%;
+		width: 98%;
 	}
 	.alert {
 		width: 98%;
@@ -1347,7 +1325,7 @@
 		font-size: 15px;
 	}
 	.settings-area .timezone {
-		width: 97%;
+		width: 100%;
 		margin-top: 53px;
 		margin-bottom: 13px;
 	}
