--- a/styles.css
+++ b/styles.css
@@ -1089,7 +1089,7 @@
 
 
 
-/* DESKTOP VIEW MEDIA QUERIES */
+/* DESKTOP VIEW */
 @media screen and (min-width: 1024px) {
 
 	
@@ -1102,61 +1102,7 @@
 		animation: ring 4s .7s ease-in-out infinite;
 		transform-origin: 50% 4px;
 	}
-	@keyframes ring {
-		0% { -webkit-transform: rotateZ(0); }
-		1% { -webkit-transform: rotateZ(30deg); }
-		3% { -webkit-transform: rotateZ(-28deg); }
-		5% { -webkit-transform: rotateZ(34deg); }
-		7% { -webkit-transform: rotateZ(-32deg); }
-		9% { -webkit-transform: rotateZ(30deg); }
-		11% { -webkit-transform: rotateZ(-28deg); }
-		13% { -webkit-transform: rotateZ(26deg); }
-		15% { -webkit-transform: rotateZ(-24deg); }
-		17% { -webkit-transform: rotateZ(22deg); }
-		19% { -webkit-transform: rotateZ(-20deg); }
-		21% { -webkit-transform: rotateZ(18deg); }
-		23% { -webkit-transform: rotateZ(-16deg); }
-		25% { -webkit-transform: rotateZ(14deg); }
-		27% { -webkit-transform: rotateZ(-12deg); }
-		29% { -webkit-transform: rotateZ(10deg); }
-		31% { -webkit-transform: rotateZ(-8deg); }
-		33% { -webkit-transform: rotateZ(6deg); }
-		35% { -webkit-transform: rotateZ(-4deg); }
-		37% { -webkit-transform: rotateZ(2deg); }
-		39% { -webkit-transform: rotateZ(-1deg); }
-		41% { -webkit-transform: rotateZ(1deg); }
-	  
-		43% { -webkit-transform: rotateZ(0); }
-		100% { -webkit-transform: rotateZ(0); }
-	  }
-	  
-	  @keyframes ring {
-		0% { -transform: rotate(0); }
-		1% { transform: rotate(30deg); }
-		3% { transform: rotate(-28deg); }
-		5% { transform: rotate(34deg); }
-		7% { transform: rotate(-32deg); }
-		9% { transform: rotate(30deg); }
-		11% { transform: rotate(-28deg); }
-		13% { transform: rotate(26deg); }
-		15% { transform: rotate(-24deg); }
-		17% { transform: rotate(22deg); }
-		19% { transform: rotate(-20deg); }
-		21% { transform: rotate(18deg); }
-		23% { transform: rotate(-16deg); }
-		25% { transform: rotate(14deg); }
-		27% { transform: rotate(-12deg); }
-		29% { transform: rotate(10deg); }
-		31% { transform: rotate(-8deg); }
-		33% { transform: rotate(6deg); }
-		35% { transform: rotate(-4deg); }
-		37% { transform: rotate(2deg); }
-		39% { transform: rotate(-1deg); }
-		41% { transform: rotate(1deg); }
-		43% { transform: rotate(0); }
-		100% { transform: rotate(0); }
-	  }
-	  
+	
 	  @keyframes ring {
 		0% { transform: rotate(0); }
 		1% { transform: rotate(30deg); }
@@ -1180,10 +1126,11 @@
 		37% { transform: rotate(2deg); }
 		39% { transform: rotate(-1deg); }
 		41% { transform: rotate(1deg); }
-	  
 		43% { transform: rotate(0); }
 		100% { transform: rotate(0); }
 	  }
+	  
+	
 
 
 	.Dashboard-area .headline {
@@ -1299,7 +1246,8 @@
 
 
 	.message-user-area {
-		grid-column: 1;
+		border: 1px solid lightgrey;
+		grid-column: 2;
 		margin: 0;
 		padding: 0;
 	}
