--- a/styles.css
+++ b/styles.css
@@ -950,12 +950,14 @@
 	}
 	.widget-container-half {
 		padding-left: 5px;
+		width: 45vw;
 	}
 
 	.daily {
 		border-right: 1px solid lightgrey;
 	}
-	.daily h3 {
+	.daily h3,
+	.mobile-users-area h3 {
 		width: auto;
 		padding: 10px 0 10px 10px;
 	}
@@ -966,46 +968,34 @@
 		grid-column: 2 / span 1;
 		border-bottom: 1px solid lightgrey;
 	}
-	.mobile-users-area h3 {
-		width: auto;
-		padding: 10px 0 10px 10px;
-	}
-
-
+	
 	.widget-container-full {
 		width: 90vw;
 	}
-	.widget-container-half {
-		width: 45vw;
-	}
-
+	
 
 	
 
-	.social-container-area {
-		padding: 0;
-		margin: 0 0 9px 0;
+	.social-container-area .social-heading {
+		margin: 0;
+		padding: 13px 0 8px 20px;
 	}
-.social-container-area .social-heading {
-		padding: 8px 0 0 4px;
-	}
-.social-cards-container {
+	.social-cards-container {
 		display: flex;
-		margin: 0 17px 0 17px;
+		align-items: center;
+		justify-content: space-around;
+		margin: 0 14px 0 14px;
 	}
-.social-cards-container section {
+
+	.social-cards-container section {
 		margin: 5px;
-	}
-	.social-cards-container .social-text h3 {
-		margin: 13px 0 0 0;
-		padding: 0;
-		font-size: 17px;
-		width: auto;
-	}
-	.social-cards-container .social-text p {
-		font-size: 36px;
+		
 	}
 	
+
+	
+	
+
 
 
 
