--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 		grid-template-rows: auto;
 		grid-template-areas: 
 						"header"
-						"navigation"
+						"navbar"
 						"main";
 	}
 
@@ -849,9 +849,33 @@
 																			/* TABLET */
 @media screen and (min-width: 768px) {
 
+	.grid-container {
+		display: grid;	
+		grid-template-columns: 100%;
+		grid-template-rows: auto;
+		grid-template-areas:
+			"header"
+			"navbar"
+			"main";
+		
+	}
+	.header {
+		grid-area: header;
+		}
+		.navigation {
+		grid-area: navigation;
+		}
+		.main {
+		grid-area: main;
+		}
 
-
-
+		.grid-container {
+			grid-template-columns: 55px 1fr;
+			grid-template-areas:
+			"header header"
+			"navbar main";
+			}
+	
 
 	.navbar {
 		height: 60px;
