--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,22 @@
 		margin: 0;
 		padding: 0;
 	}
+		.navbar { 
+		height: 60px;
+		border: none;
+	}
+	.navbar li {
+		height: 58px;
+	}
+	.navbar #item-1 {
+		margin-right: auto;
+	}
+	.navbar #item-2 {
+		margin: 0;
+	}
+	.navbar #item-3 {
+		padding-left: 0;
+	}
 	.navbar .title-logo {
 		font-family: 'Martel Sans';
 		color: whitesmoke;
@@ -218,7 +234,7 @@
 	}
 	.tab {
 		background-color: #ededed;
-		flex: 1 0 40%;
+		flex: 1 40%;
 		height: 0;
 		margin: 0;
 		padding: 30px;
@@ -295,7 +311,9 @@
 		cursor: pointer;
 		border: 1px solid green;
 		border-radius: 18px;
+		background-color: lightgreen;
 	}
+	
 
 	/* DAILY TRAFFIC AREA */
 
@@ -603,39 +621,39 @@
 
 	/* MESSAGE USER AREA */
 
-	.message-user-area {
+	.message {
 		width: 100%;
 		border-top: 2px solid lightgrey;
 		border-bottom: 2px solid lightgrey;
 		padding: 0 0 5px 0;
 	}
-	.message-user-area h3 {
+	.message h3 {
 		margin: 0;
 		padding: 15px 0 15px 9px;
 		font-family: 'Martel Sans', sans-serif;
 		font-size: 17px;
 		font-weight: 600;
 	}
-	.message-user-area .widget-container {
+	.message .widget-container {
 		margin: 0 auto;
-		display: flex;
+		display: block;
 		width: 95%;
 	}
-	.message-user-area .widget-container input {
+	.message .widget-container input {
 		border: 2px solid lightgrey;
 		border-radius: 5px;
 		background-color: #ededed;
 		height: 50px;
 		width: 100%;
 	}
-	.message-user-area input:hover {
+	.message input:hover {
 		border: 2px solid turquoise;
 	}
-	.message-user-area .widget-container .form-field {
+	.message .widget-container .form-field {
 		font-size: 15px;
 		padding: 0 0 0 10px;
 	}
-	.message-user-area .widget-container textarea {
+	.message .widget-container textarea {
 		border: 2px solid lightgrey;
 		margin: 15px auto;
 		display: block;
@@ -643,16 +661,16 @@
 		height: 150px;
 		border-radius: 5px;
 	}
-	.message-user-area textarea:hover {
+	.message textarea:hover {
 		border: 2px solid turquoise;
 	}
-	.message-user-area .widget-container #messageField {
+	.message .widget-container #messageField {
 		font-family: 'Martel-Sans', sans-serif;
 		font-size: 15px;
 		padding: 10px 0 0 10px;
 		background-color: #ededed;
 	}
-	.message-user-area #send {
+	.message #send {
 		border: none;
 		border-radius: 5px;
 		background-color: #8282ee;
@@ -869,7 +887,7 @@
 		height: 50px;
 		width: auto;
 		text-align: center;
-		margin: auto;
+		margin-bottom: 25px;
 		padding: 10px 0 0 0;
 	}
 
@@ -877,10 +895,16 @@
 	.Dashboard-area {
 		grid-column: 1 / span 2;
 		margin: 0;
+	
 	}
 	.Dashboard-area .headline {
 		padding-left: 15px;
-		width: 20%;
+		width: 20%;	
+	}
+	.tab {
+		flex-basis: 100%;
+		flex: wrap;
+		margin: 30px;
 	}
 	.alert {
 		display: grid;
@@ -1112,10 +1136,11 @@
 																			/* DESKTOP VIEW */
 @media screen and (min-width: 1024px) {
 
-	.dashboard-area .headline {
-		margin: 0;
-		padding-left: 11px;
-		width: 98%;
+	.tab {
+		flex: 1;
+		flex: wrap;
+		flex-basis: 100%;
+
 	}
 	.alert {
 		width: 100%;
@@ -1232,17 +1257,31 @@
 		margin: 40px 0 0 0;
 		padding: 8px 0 0 0;
 	}
-	.message-user-area {
+	.message {
 		border: 1px solid lightgrey;
-		grid-column: 2;
+		grid-column: 1;
 		margin: 0;
 		padding: 0;
 	}
-	.message-user-area h3 {
+	.message-user-area h3,
+	.settings-area h3 {
 		padding: 10px 0 10px 14px;
 	}
 	.message-user-area .widget-container textarea {
 		margin-bottom: 37px;
 	}
-	
+	.settings-area {
+		border: 1px solid lightgrey;
+		grid-column: 2;
+		margin: 0;
+		padding: 0;
+	}
+	.settings-area .toggle-container {
+		padding: 15px;
+		width: 60%;
+		margin: 14px 0;
+	}
+	.settings-button {
+		padding: 30px;
+	}
 }
